# videogen

./: .env.example  .gitignore  README.md  app.py  config.py  package.json  requirements.txt  run.py  state.py  video.py
.streamlit/: secrets.toml.example
agents/: research.py  review.py  script.py  video.py
client/: composio_client.py  connections.py  heygen_client.py  openai_client.py  reddit_client.py  sarvam_client.py  twitter_client.py
local/: .env.example  pyproject.toml
local/app/: __init__.py  database.py  main.py  storage.py  validation.py
local/pipeline/: config.py  orchestrator.py  postprocess.py
local/tests/: test_database.py  test_validation.py
services/: elevenlabs_client.py  heygen_client.py  openai_client.py
stages/: audio.py  research.py  review.py  script.py  video.py
tests/: test_helpers.py  test_state.py
utils/: helpers.py  logger.py  prompts.py
video/: .gitignore
video/app/: schemas.py  worker.py
video/pipeline/: __init__.py  audio_prep.py  base_motion.py  commands.py  errors.py  lipsync.py  musetalk_gpu_runner.py  run.py
