[project]
name = "talking-head-service"
version = "0.1.0"
description = "MP3-to-talking-head video service backed by MuseTalk and optional LivePortrait motion."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "Pillow>=10.0,<12.0",
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
face-validation = ["insightface>=0.7.3", "onnxruntime-gpu>=1.18"]
dev = ["httpx>=0.27", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
